Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -38,15 +38,45 @@
           <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
         </div>
 
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+        <p>Die Übersicht zu vielen parallel laufenden Change Requests über ihren gesamten Lebenszyklus zu behalten, ist eine Herausforderung. Jeder CR ist ein Projekt für sich und muss mit allen Parteien auf Kunden- und Providerseite abgestimmt werden. Ohne Informationsmanagement verliert man schnell die Übersicht.</p>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p>Klare Übersicht für welche Change Requests Handlungsbedarf besteht, jeweils aus Kunden- und Providersicht.
+Wo liegt der Ball?
+Was ist (über-)fällig?</p>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
+<p>Dabei entspricht der Status entweder</p>
+
+<ul>
+<li>Ist gerade beim Provider zur Bearbeitung</li>
+<li>ist gerade beim Kunden zur Bearbeitung
+d.h. manche Status drücken aus, dass der Provider daran arbeitet, andere drücken aus, dass der Kunde sich darum kümmern muss oder eine Rückmeldung von ihm aussteht.</li>
+</ul>
+
+<p>Der Status lässt sich auf Providerseite noch einmal unterscheiden, ob er eine Aktion vom</p>
+
+<ul>
+<li>Change Management </li>
+<li>Architektur </li>
+<li>Development oder</li>
+<li>Deployment 
+Team erfordert.</li>
+</ul>
+
+<h3>
+<a id="termine" class="anchor" href="#termine" aria-hidden="true"><span class="octicon octicon-link"></span></a>Termine</h3>
+
+<p>Liste der Termine in aufsteigender Form oder als Monatsansicht der geplanten Deployments und anderer Termine zu den CRs.</p>
+
+<h3>
+<a id="views" class="anchor" href="#views" aria-hidden="true"><span class="octicon octicon-link"></span></a>Views</h3>
+
+<p>Aus der Change Request Ansicht kann man durch einen Klick auf die Tracker ID, direkt zur Webansicht des Win@ Eintrags gelangen (Win@ Notes Link vom CR)</p>
+
+<p>Das gleiche gilt für die Doku. Ein direkter Link zu Sharepoint Doku des CRs wird angezeigt.</p>
+
+<p>Neben dem geplanten, werden nach der Durchführung jeweils auch das tatsächliche Datum für Load auf TST, INT, PRD angezeigt.</p>
+
+<p>Im Dashboard wird die Anzahl der CRs nach Status sortiert angezeigt.</p>
 
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
